src/main/java/com/example/mybookshopapp/errors/FileDownloadException.java
package com.example.mybookshopapp.errors;

public class FileDownloadException extends Exception {
    public FileDownloadException(String message) {
        super(message);
    }
}
